// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleCards Check Button 1`] = `
Object {
  "button": Object {
    "background-color": "",
    "background-color-global": false,
    "border-color": "",
    "border-color-global": false,
    "color": "rgba(16,109,60,1)",
    "color-global": true,
    "font-family-general": "Roboto",
    "font-size-l": 16,
    "font-size-unit-l": "px",
    "font-size-unit-xl": "px",
    "font-size-unit-xxl": "px",
    "font-size-xl": 99,
    "font-size-xxl": 22,
    "font-style-general": "normal",
    "font-style-xl": "italic",
    "font-weight-general": 400,
    "font-weight-xl": "300",
    "hover-background-color": "",
    "hover-background-color-global": false,
    "hover-border-color": "",
    "hover-border-color-global": false,
    "hover-color": "",
    "hover-color-global": false,
    "letter-spacing-unit-xl": "px",
    "letter-spacing-unit-xxl": "px",
    "letter-spacing-xl": 5,
    "letter-spacing-xxl": 0,
    "line-height-xl": 10,
    "line-height-xxl": 1.5,
    "text-decoration-general": "unset",
    "text-decoration-xl": "overline",
    "text-transform-general": "none",
    "text-transform-xl": "capitalize",
  },
}
`;

exports[`StyleCards Check Headings 1`] = `
Object {
  "h1": Object {
    "color": "rgba(16,109,60,1)",
    "color-global": true,
    "font-family-general": "Roboto",
    "font-size-l": 40,
    "font-size-m": 36,
    "font-size-s": 34,
    "font-size-unit-l": "px",
    "font-size-unit-m": "px",
    "font-size-unit-s": "px",
    "font-size-unit-xl": "px",
    "font-size-unit-xs": "px",
    "font-size-unit-xxl": "px",
    "font-size-xl": 99,
    "font-size-xs": 32,
    "font-size-xxl": 65,
    "font-style-general": "normal",
    "font-style-xl": "italic",
    "font-weight-general": 500,
    "font-weight-xl": "300",
    "letter-spacing-unit-xl": "px",
    "letter-spacing-unit-xxl": "px",
    "letter-spacing-xl": 5,
    "letter-spacing-xxl": 0,
    "line-height-l": 50,
    "line-height-m": 46,
    "line-height-s": 44,
    "line-height-unit-l": "px",
    "line-height-unit-m": "px",
    "line-height-unit-s": "px",
    "line-height-unit-xl": "px",
    "line-height-unit-xs": "px",
    "line-height-unit-xxl": "px",
    "line-height-xl": 99,
    "line-height-xs": 42,
    "line-height-xxl": 75,
    "text-decoration-general": "unset",
    "text-decoration-xl": "overline",
    "text-transform-general": "none",
    "text-transform-xl": "capitalize",
  },
}
`;

exports[`StyleCards Check Link 1`] = `
Object {
  "link": Object {
    "hover-color": "201,52,10",
    "hover-color-global": true,
    "link-color": "rgba(16,109,60,1)",
    "link-color-global": true,
  },
}
`;

exports[`StyleCards Check Paragraph 1`] = `
Object {
  "p": Object {
    "color": "rgba(16,109,60,1)",
    "color-global": true,
    "font-family-general": "Roboto",
    "font-size-unit-xl": "px",
    "font-size-unit-xxl": "px",
    "font-size-xl": 99,
    "font-size-xxl": 24,
    "font-style-general": "normal",
    "font-style-xl": "italic",
    "font-weight-general": 400,
    "font-weight-xl": "300",
    "letter-spacing-unit-xl": "px",
    "letter-spacing-unit-xxl": "px",
    "letter-spacing-xl": 5,
    "letter-spacing-xxl": 0,
    "line-height-unit-xl": "px",
    "line-height-unit-xxl": "px",
    "line-height-xl": 99,
    "line-height-xxl": 34,
    "text-decoration-general": "unset",
    "text-decoration-xl": "overline",
    "text-transform-general": "none",
    "text-transform-xl": "capitalize",
  },
}
`;

exports[`StyleCards Check Quick Pick Colour Presets 1`] = `
Object {
  "color": Object {
    "1": "16,109,60",
  },
}
`;
